# hello-rust

./: .gitignore  Cargo.toml  README.md  for-me-rarely-used-and-easy-to-forget.md
3_variables/src/: main.rs
CS61B-SP21/lectureCode/: Cargo.toml
branches/: Cargo.toml
c_03_function/: Cargo.toml
c_03_variables/: Cargo.toml
c_04_ownership-2/: Cargo.toml
c_04_ownership-2/src/: main.rs
c_04_ownership-3/: Cargo.toml
c_04_ownership-3/src/: main.rs
c_04_ownership-quote/src/: main.rs
c_04_ownership/src/: main.rs
c_04_slice/: Cargo.toml
c_04_slice/src/: main.rs
c_05_rectangles/src/: main.rs
c_06_enum/src/: main.rs
c_06_if_let/src/: main.rs
c_06_match/: Cargo.toml
c_06_match/src/: main.rs
c_06_option/: Cargo.toml
c_06_option/src/: main.rs
c_07_restaurant/: Cargo.toml
c_07_restaurant/src/: front_of_house.rs  lib.rs
c_08_hash_map/: Cargo.toml
c_08_vec/src/: main.rs
c_09_panic/src/: main.rs
c_10/: Cargo.toml
c_10/src/: main.rs
c_10_2/: Cargo.toml
c_10_2/src/: main.rs
c_10_generics/src/: main.rs  pare_point.rs
c_10_lifetime/: Cargo.toml
c_10_lifetime_2/: Cargo.toml
c_10_lifetime_static/: Cargo.toml
c_10_lifetime_struct/src/: main.rs
c_10_trail_demo/: Cargo.toml
c_10_trait/: Cargo.toml
c_10_trait/src/: main.rs
c_11_test_adder/: Cargo.toml
c_11_test_adder/src/: lib.rs
c_11_test_adder_2/tests/: integration_test.rs
c_12/: Cargo.toml
c_12/src/: main.rs
c_12_2/: Cargo.toml
c_12_2/src/: lib.rs  main.rs
c_12_minigrep/src/: lib.rs
c_13_2/: Cargo.toml
c_13_closure/: Cargo.toml
c_13_closure/src/: main.rs
c_13_iterator/src/: counter.rs
c_15/: Cargo.toml
c_15/src/: link.rs
c_15_box/src/: link.rs  main.rs
c_15_cycle/: Cargo.toml
c_15_cycle/src/: main.rs
c_15_cycle_use_weak/src/: main.rs
c_15_drop/src/: main.rs
c_15_rc/: Cargo.toml
c_15_rc/src/: main.rs
c_15_refcell/: Cargo.toml
c_15_refcell/src/: lib.rs  main.rs
c_16_channel/src/: lib.rs  main.rs
c_16_move/: Cargo.toml
c_16_move/src/: main.rs
c_16_mutex/: Cargo.toml
c_16_mutex/src/: main.rs
c_16_spawn/: Cargo.toml
c_16_spawn/src/: main.rs
c_17_2/: Cargo.toml
c_17_2/src/: main.rs
c_17_3/src/: lib.rs  main.rs
c_18_1/: Cargo.toml
c_18_1/src/: main.rs
c_18_2/: Cargo.toml
c_18_2/src/: main.rs
c_19_1/: Cargo.toml
c_19_1/src/: main.rs
c_19_2/: Cargo.toml
c_19_2/src/: main.rs
c_19_3/: Cargo.toml
c_19_3/src/: main.rs
c_19_4/: Cargo.toml
c_19_4/src/: main.rs
c_19_5/src/: main.rs
c_19_6/src/: main.rs
c_1_hello_world/: Cargo.toml
c_20_1/: Cargo.toml
c_20_1/src/: lib.rs  main.rs
c_2_guessing_game/: Cargo.toml
c_3_branches/: Cargo.toml
c_3_branches/src/: main.rs
c_3_function/: Cargo.toml
c_3_function/src/: main.rs
c_3_variables/: Cargo.toml
c_3_variables/src/: main.rs
embedded/: README.md
embedded/discovery-microbit/: .rustfmt.toml  Cargo.toml  README.md
embedded/discovery-microbit/05-led-compass/: Cargo.toml
embedded/discovery-microbit/05-led-compass/src/: main.rs
embedded/discovery-microbit/07-snake-game/: Cargo.toml  Embed.toml
enum_demo/: Cargo.toml
enum_demo/src/: main.rs
example/unix_sockets/: Cargo.toml  README.md
function/: Cargo.toml
guessing_game/: Cargo.toml
hash_map_demo/: Cargo.toml
hello-uefi/: .gitignore  Cargo.toml  README.md  run.sh
if_let/: Cargo.toml
lifetime/: Cargo.toml
lifetime_2/: Cargo.toml
lifetime_method/: Cargo.toml
lifetime_static/: Cargo.toml
lifetime_struct/: Cargo.toml
match_demo/: Cargo.toml
minigrep/: Cargo.toml
option_demo/: Cargo.toml
ownership/: Cargo.toml
ownership-2/: Cargo.toml
ownership-3/: Cargo.toml
ownership-quote/: Cargo.toml
panic_demo/: Cargo.toml
phil-opp-os/: Cargo.toml  README.md
phil-opp-os/post-04/: Cargo.toml  build.sh  start.sh
phil-opp-os/post-04/.cargo/: config.toml
phil-opp-os/post-04/src/: lib.rs  main.rs  vga_buffer.rs
phil-opp-os/post-04/tests/: basic_boot.rs  should_panic.rs
phil-opp-os/post-11/: Cargo.toml
phil-opp-os/post-11/.cargo/: config.toml
phil-opp-os/post-11/src/: allocator.rs  main.rs
phil-opp-os/post-11/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
pingcap/talent-plan/kvs/: Cargo.toml  README.md
pingcap/talent-plan/kvs/benches/: engine_bench.rs
pingcap/talent-plan/kvs/src/: client.rs  command.rs  error.rs  kv.rs  lib.rs  protocol.rs  server.rs
pingcap/talent-plan/kvs/src/engines/: kvs.rs  mod.rs  sled.rs
pingcap/talent-plan/kvs/src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
pingcap/talent-plan/kvs/tests/: kv_store.rs
rCore-Tutorial-v3/: README.md
rectangles/: Cargo.toml
restaurant/: Cargo.toml
restaurant_2/: Cargo.toml
slice/: Cargo.toml
struct_demo/: Cargo.toml
test_adder/: Cargo.toml
test_adder_2/: Cargo.toml
trail_demo/: Cargo.toml
vec_demo/: Cargo.toml
(+195 files in other folders)
