[package]
name = "post-04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[test]]
# name = "should_panic"
# harness = false


[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
test-args = [
    # 将输出通过串口将输出重定向到控制台
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    # 当 dispaly 的值为 none 隐藏 qemu 的窗口
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)

# [profile.release]
# panic = 'abort'

# [profile.dev]
# panic = "abort"
