[package]
name = "post_11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[test]]
# name = "should_panic"
# harness = false


[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[dependencies.bootloader]
version = "0.9.23"
features = [
    # 将 页表 直接映射到虚拟内存, 将会导致内存碎片
    "map_physical_memory"
    # 将 页表 通过递归的方式进行存储访问
    # "recursive_page_table"
]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
test-args = [
    # 将输出通过串口将输出重定向到控制台
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    # 当 dispaly 的值为 none 隐藏 qemu 的窗口
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)

# [profile.release]
# panic = 'abort'

# [profile.dev]
# panic = "abort"

# 当一个测试文件中仅有一个测试, 可以设置这个
# 这样就可以将 _start 函数作为测试函数
[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false