[package]
name = "kvs"
version = "0.1.0"
authors = ["Sean <thisseanzhang@gmail.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"

[dependencies.clap]
version = "4.0.29"
features = [ "derive" ]

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
tempfile = "3.0.7"
walkdir = "2.3.2"
