[package]
name = "kvs"
version = "0.1.0"
authors = ["Sean <thisseanzhang@gmail.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
thiserror = "1.0"

# 
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"

# log
log = "0.4.6"
env_logger = "0.10.0"

sled = "0.34.6"

num_cpus = "1.15.0"
crossbeam = "0.8.2"
crossbeam-skiplist="0.1.0"
rayon = "1.6.1"

[dependencies.clap]
version = "4.0.29"
features = [ "derive" ]

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
tempfile = "3.0.7"
walkdir = "2.3.2"
criterion = "0.4.0"
crossbeam-utils = "0.8.14"
panic-control = "0.1.4"

[dev-dependencies.rand]
version = "0.8.5"
features = ["small_rng"]

[[bench]]
name = "engine_bench"
harness = false